--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">farmer-information-app-for-agriculture</string>
     <string name="title_activity_main">farmer-information-app-for-agriculture</string>
-    <string name="package_name">com.example.app</string>
-    <string name="custom_url_scheme">com.example.app</string>
+    <string name="package_name">com.farmerInformationAppForAgricultureInTabon.app</string>
+    <string name="custom_url_scheme">com.farmerInformationAppForAgricultureInTabon.app</string>
 </resources>
